@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (C) 2011, 2020 Matthias Helmling and Contributors
+ * Copyright (C) 2011, 2021 Matthias Helmling and Contributors
  *
  * This program is free software; you can redistribute it and/or modify it under
  * the terms of the GNU General Public License as published by the Free Software
@@ -22,6 +22,7 @@ import net.tourbook.data.TourTag;
 import net.tourbook.data.TourType;
 import net.tourbook.database.TourDatabase;
 import net.tourbook.extension.export.ActionExport;
+import net.tourbook.extension.upload.ActionUpload;
 import net.tourbook.tag.TagMenuManager;
 import net.tourbook.tour.ActionOpenAdjustAltitudeDialog;
 import net.tourbook.tour.ActionOpenMarkerDialog;
@@ -41,7 +42,6 @@ import net.tourbook.ui.action.ActionSetTourTypeMenu;
 import net.tourbook.ui.views.rawData.ActionMergeTour;
 
 import org.eclipse.jface.action.Action;
-import org.eclipse.jface.action.IMenuListener;
 import org.eclipse.jface.action.IMenuManager;
 import org.eclipse.jface.action.MenuManager;
 import org.eclipse.jface.action.Separator;
@@ -69,6 +69,7 @@ public class TourContextMenu {
    private ActionSetAltitudeValuesFromSRTM            _actionSetAltitudeFromSRTM;
    private ActionSetPerson                            _actionSetOtherPerson;
    private ActionSetTourTypeMenu                      _actionSetTourType;
+   private ActionUpload                               _actionUploadTour;
 
    public TourContextMenu() {}
 
@@ -92,6 +93,7 @@ public class TourContextMenu {
 
       _actionExportTour = new ActionExport(tourProvider);
       _actionPrintTour = new ActionPrint(tourProvider);
+      _actionUploadTour = new ActionUpload(tourProvider);
 
       _tagMenuMgr = new TagMenuManager(tourProvider, true);
 
@@ -108,15 +110,12 @@ public class TourContextMenu {
       final TagMenuManager tagMenuMgr = new TagMenuManager(calendarView, true);
 
       menuMgr.setRemoveAllWhenShown(true);
-      menuMgr.addMenuListener(new IMenuListener() {
-         @Override
-         public void menuAboutToShow(final IMenuManager manager) {
+      menuMgr.addMenuListener(menuManager -> {
 
-            // hide tour tooltip when opened
-            calendarView.getTourInfoTooltip().hideToolTip();
+         // hide tour tooltip when opened
+         calendarView.getTourInfoTooltip().hideToolTip();
 
-            fillContextMenu(manager, calendarView, localActions);
-         }
+         fillContextMenu(menuManager, calendarView, localActions);
       });
 
       final Menu contextMenu = menuMgr.createContextMenu(control);
@@ -153,6 +152,7 @@ public class TourContextMenu {
       TourTypeMenuManager.fillMenuWithRecentTourTypes(menuMgr, calendarView, true);
 
       menuMgr.add(new Separator());
+      menuMgr.add(_actionUploadTour);
       menuMgr.add(_actionExportTour);
       menuMgr.add(_actionPrintTour);
 
@@ -218,11 +218,12 @@ public class TourContextMenu {
 
       _actionExportTour.setEnabled(isTourSelected);
       _actionPrintTour.setEnabled(isTourSelected);
+      _actionUploadTour.setEnabled(isTourSelected);
 
       final ArrayList<TourType> tourTypes = TourDatabase.getAllTourTypes();
       _actionSetTourType.setEnabled(isTourSelected && tourTypes.size() > 0);
 
-      Long tourTypeId = new Long(-1); // TODO -> NOTOUR
+      Long tourTypeId = Long.valueOf(-1); // TODO -> NOTOUR
       if (null != firstSavedTour) {
          final ArrayList<Long> tagIds = new ArrayList<>();
          for (final TourTag tag : firstSavedTour.getTourTags()) {
@@ -234,7 +235,7 @@ public class TourContextMenu {
          }
          TourTypeMenuManager.enableRecentTourTypeActions(isTourSelected, tourTypeId);
       } else {
-         _tagMenuMgr.enableTagActions(isTourSelected, isOneTour, new ArrayList<Long>());
+         _tagMenuMgr.enableTagActions(isTourSelected, isOneTour, new ArrayList<>());
          TourTypeMenuManager.enableRecentTourTypeActions(isTourSelected, tourTypeId);
       }
    }
@@ -271,6 +272,7 @@ public class TourContextMenu {
       TourTypeMenuManager.fillMenuWithRecentTourTypes(menuMgr, tourProvider, true);
 
       menuMgr.add(new Separator());
+      menuMgr.add(_actionUploadTour);
       menuMgr.add(_actionExportTour);
       menuMgr.add(_actionPrintTour);
 
